<resources>
    <string name="app_name">BankingSystem</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="virtualBadges">Virtual Badges</string>
    <string name="userName">Username</string>
    <string name="intro_description">and is something that allows employees to take charge of their professional development.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continueWith">- Continue With -</string>
    <string name="doNotHaveAccount">Don’t Have An Account? Sign Up</string>
    <string name="userEmail">User Email</string>
    <string name="retypePassword">Retype password</string>
    <string name="iAcceptTermsAndConditions">I Accept Terms and Conditions</string>
    <string name="alreadyHaveAccount">Already Have An Account? Log In</string>
    <string name="it_s_created_to_recognise_nthe_ability_of_our_team">It’s created to recognise\nthe ability of our Team</string>
    <string name="userNameIsInvalid">User name field is required</string>
    <string name="userMailIsInvalid">User email  is not valid</string>
    <string name="userPasswordIsInvalid">User password is required and need to be not less than 6 symbols</string>
    <string name="userRepeatPasswordIsInvalid">Repeat password is incorrect</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_out">Log Out</string>
    <string name="noSuchUSerFound">Invalid Credentials</string>
    <string name="please_wait">Please Wait</string>
    <string name="userAlreadyExists">User exists with same username</string>
    <string name="phone_number">Phone Number</string>
    <string name="transactions">Transactions</string>
    <string name="deposit">Deposit</string>
    <string name="william_jackson">William Jackson</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pay_utility">Pay Utility</string>
    <string name="extract_for">Extract For</string>
    <string name="make_transaction">Make Transaction</string>
    <string name="activate_account">Activate Account</string>
    <string name="account_type">Account Type</string>
    <string name="social_card_id">Social Card ID</string>
    <string name="second_phone_number">Second Phone Number</string>
    <string name="from_account">From Account</string>
    <string name="to_account">To Account</string>
    <string name="balance">Balance</string>
    <string name="comment">Comment</string>
    <string name="available_balance_is">Available Balance is</string>
    <string name="clear_data">Clear Data</string>
    <string name="data_changed_successfully">Data was cleared successfully</string>
    <string name="amount">Amount</string>

</resources>