<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import
            alias="view"
            type="android.view.View" />
        <variable
            name="isLoading"
            type="Boolean" />
        <variable
            name="activity"
            type="com.example.bankingsystem.view.auth.LogInActivity" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".view.auth.LogInActivity">

            <ImageView
                android:id="@+id/logInPic"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/log_in_pic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/logInText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/reem_rufi_regular"
                android:gravity="center"
                android:text="@string/logIn"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_XXL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInPic" />

            <EditText
                android:id="@+id/userPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/hintColor"
                android:hint="@string/phone_number"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:singleLine="true"
                android:paddingBottom="10dp"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/text_size_L"
                app:layout_constraintTop_toBottomOf="@+id/logInText" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/hintColor"
                android:ellipsize="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/text_size_L"
                app:layout_constraintTop_toBottomOf="@+id/userPhoneNumber"
                app:passwordToggleEnabled="true" />

            <TextView
                android:id="@+id/forgetPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/reem_rufi_regular"
                android:singleLine="true"
                android:text="@string/forgot_password"
                android:textColor="#685BFC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

            <Button
                android:id="@+id/logInButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_view_size_L"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_shape_auth"
                android:backgroundTint="@color/logInButtonColor"
                android:fontFamily="@font/reem_rufi_regular"
                android:gravity="center"
                android:onClick="@{_->activity.logIn()}"
                android:text="@string/logIn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_L"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgetPasswordText" />

            <TextView
                android:id="@+id/doNotHaveAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:onClick="@{_->activity.signUp()}"
                android:text="@string/doNotHaveAccount"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_L"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logInButton"
                app:layout_constraintVertical_bias="0.2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <include
            android:id="@+id/progressInclude"
            layout="@layout/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{isLoading? view.GONE :view.VISIBLE}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
